Fixed the collapse view

--- a/app/assets/stylesheets/contract_processes.css.scss
+++ b/app/assets/stylesheets/contract_processes.css.scss
@@ -16,10 +16,10 @@
 }
 
 #process_rfp_box{
-	color:#ffffff;
+	color:#000000;
 }
 
 
 #process_bid_box{
-	color:#ffffff;
+	color:#000000;
 }
