--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1192,6 +1192,14 @@ background-color:#b0e0e6;
   background-color:orange;
 }
 
+.redbox {
+  background-color:red;
+}
+
+.greenbox {
+  background-color:green;
+}
+
 
 
 
